# CAST-logicalSLAMN

./: .gitignore  .gitmodules  CLAUDE.md  README.md
baselines/convoi/: gamma_api.txt  gpt-v5-ros2-2.py  launch_convoi.sh  motion_analysis.txt  planner_ros2.py
baselines/lelan/: .gitignore
cast-vla/: .gitmodules  README.md  launch.sh  pyproject.toml  run_tpu.sh  run_tpu_pod.sh  ssh_pod.sh  tpu_config.sh  update.sh
cast-vla/configs/: bridge_config.py  cast_config.py  cast_config_dct.py  cast_config_pod.py  inference_config.py  smoke_test.py
cast-vla/scripts/: inference_server.py  train.py
cast-vla/src/big_vision/models/proj/paligemma/: paligemma.py
cast-vla/src/palivla/: base_config.py  constants.py  dataset.py  eval_step.py  inference.py  load_fns.py  load_model.py  model_components.py  optimizer.py  palivla_typing.py  predict_fns.py  predict_fns_testing.py  standardization_transforms.py  train_step.py
cast-vla/src/palivla/components/: action_tokenizer.py  model.py  sequence_builder.py  train_state.py
cast-vla/src/palivla/critic/: model_components.py  train_step.py  visualize_critic.py  vla_critic.py
cast-vla/src/palivla/octo/: data_utils.py  dataset.py  traj_transforms.py
cast_paligemma/: README.md  action_tokenizer.py  cast_dataset.py  config.yaml  evaluate.py  inference_paligemma.py  quick_start.sh  requirements.txt  run_inference.sh  run_training.sh  setup_dataset.py  test_setup.py  train_paligemma.py
configs/: camera.yaml  robot.yaml
deployment/: navigate_vla.py  navigate_vla.sh  pd_controller.py  ros_data.py  topic_names.py  utils.py
(+39 files in other folders)
