[project]
name = "big-vision"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"big-vision",
	"chex>=0.1.90",
	"distrax>=0.1.5",
	"dlimp",
	"einops>=0.8.1",
	"flax==0.9.0",
	"huggingface-hub>=0.34.1",
	"ipykernel>=6.30.0",
	"jax>=0.4.34",
	"matplotlib>=3.10.3",
	"ml-collections>=1.1.0",
	"numpy>=1.26.4",
	"octo>=0.3.0",
	"orbax-checkpoint==0.9.0",
	"tensorstore==0.1.76",
	"overrides>=7.7.0",
	"pip>=25.1.1",
	"prettytable>=3.16.0",
	"protobuf>=4.25.8",
	"scalax>=0.2.5",
	"scikit-learn>=1.7.1",
	"scipy>=1.16.0",
	"tfds-nightly>=4.9.0",
	"transformers>=4.54.0",
	"wandb>=0.21.0",
]

[project.optional-dependencies]
tpu = [
	"jax[tpu]>=0.4.34",
	"libtpu-nightly"
]
gpu = [
	"jax[cuda12]>=0.4.34"
]

[tool.uv]
find-links = ["https://storage.googleapis.com/jax-releases/libtpu_releases.html"]
prerelease = "allow"
conflicts = [
	[
		{extra = "tpu"},
 		{extra = "gpu"},
	],
]

[tool.uv.sources]
dlimp = { git = "https://github.com/kvablack/dlimp.git" }
big-vision = { workspace = true }
octo = { path = "octo", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
	"ipywidgets>=8.1.5",
	"isort>=6.0.0b2",
        "ruff>=0.8.4",
]

[tool.hatch.metadata]
allow-direct-references = true

